Added api calls for trainer, both add and get.
P.S. ICE IN MY VEINS!!!

--- a/backend/Pokemon_App/src/main/resources/application.properties
+++ b/backend/Pokemon_App/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-# set up the database connections
+server.port=6969
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Enable spring data repos
+spring.data.jpa.repositories.enabled=true
+
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/POKE_APP?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+server.servlet.context-path=/POKE_SERVER
+
